--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidxComposeCompiler = "1.5.8"
 datastorePreferences = "1.1.1"
 integrity = "1.4.0"
 kotlin = "1.9.22"
+kotlinxCoroutinesTestVersion = "1.10.1"
 ksp = "1.9.22-1.0.17"
 
 # Google Services & Firebase
@@ -74,6 +75,7 @@ integrity = { module = "com.google.android.play:integrity", version.ref = "integ
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutinesPlayServices" }
+kotlinx-coroutines-test-v1101 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTestVersion" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 testng = { group = "org.testng", name = "testng", version.ref = "testng" }
