--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.64.2",
     "firebase": "^11.2.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "sonner": "^1.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
