--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,13 @@
 {
-  "projects": {
-    "default": "fitapplication-3a2ae"
-  }
+  "projects": {},
+  "targets": {
+    "fitapplication-3a2ae": {
+      "hosting": {
+        "admin-panel-firebase-hosting": [
+          "admin-panel-firebase-hosting"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
