--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.7.9",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.1",
     "lodash": "^4.17.21",
