--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
   security:
     user:
       password: none
+  cache:
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=30m
 
   # Wspólne ustawienia JPA/Hibernate
   jpa:
@@ -23,6 +26,12 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration
     table: flyway_schema_history
+
+external:
+  openfoodfacts:
+    connect-timeout: 10s
+    read-timeout: 30s
+    max-results: 50
 
 app:
   data:
