--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -14,14 +14,14 @@ spring:
   # JPA Development Configuration
   jpa:
     hibernate:
-      ddl-auto: update  # Opcjonalnie: update dla dev, validate dla prod
+      ddl-auto: update
     show-sql: true
 
   mail:
-    host: ${SMTP_HOST:serwer2561711.home.pl}
+    host: ${SMTP_HOST}
     port: ${SMTP_PORT:587}
-    username: ${SMTP_USERNAME:kontakt@nutrilog.pl}
-    password: ${SMTP_PASSWORD:haslo_testowe}
+    username: ${SMTP_USERNAME}
+    password: ${SMTP_PASSWORD}
     properties:
       mail:
         smtp:
