--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ghcr.io/${{ env.IMAGE_NAME }}/backend:latest
+          tags: ghcr.io/${{ env.IMAGE_NAME }}/frontend:latest
 
   deploy-to-vps:
     needs: build-and-push
